# kalshi

./: .coverage  .env.example  .gitignore  README.md  TESTING.md  app.py  pyproject.toml
.github/workflows/: ci.yml
app_pages/: find.py  portfolio.py  tennis.py  watch.py
research/blown_leads/: scratch_allsports_blown_leads.py  scratch_atp_blown_leads.py
research/btc15m/: btc15m_cache.json  scratch_btc15m_analysis.py  scratch_btc15m_backtest.py
research/soccer/: scratch_soccer_secondary.py  scratch_top95_backtest.py  scratch_wc_score_backtest.py
research/tennis_volatility/: scratch_vol_swing_analysis.py  scratch_wta_atp_swings.py
src/kalshi/: __init__.py  auth.py  client.py  fees.py  kelly.py  markets.py  orders.py  positions.py  risk.py  stop_engine.py  stops.py  tennis.py  ws.py
src/kalshi/cli/: __init__.py  hedge_watcher.py  stop_engine.py
tests/: conftest.py  test_app_smoke.py  test_auth.py  test_cli.py  test_client.py  test_fees.py  test_kelly.py  test_markets.py  test_orders.py  test_pages_compile.py  test_positions.py  test_risk.py  test_scan.py  test_stop_engine.py  test_stops.py  test_tennis.py  test_tennis_ui.py  test_timing.py  test_ui_imports.py  test_ws.py
ui/: __init__.py  data.py  games.py  portfolio.py  settings.py  sizer.py  stops.py  tennis.py
