[project]
name = "kalshi-kelly"
version = "0.1.0"
description = "Streamlit app that sizes Kalshi sports bets using the Kelly criterion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.37",
    "requests>=2.32",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "requests-mock>=1.12",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "--cov=src/kalshi --cov-report=term-missing --cov-fail-under=85"
